# FastTransformer

./: Dockerfile  README.md  pyproject.toml
app/: main.py
